--- a/package.json
+++ b/package.json
@@ -15,11 +15,23 @@
     "apollo-boost": "^0.3.1",
     "apollo-server": "^2.5.0",
     "apollo-server-micro": "^2.5.0",
+    "classnames": "^2.2.6",
     "compression": "^1.7.1",
+    "cookies": "^0.7.3",
+    "css-loader": "^2.1.1",
+    "dotenv": "^8.0.0",
+    "file-loader": "^3.0.1",
+    "flexboxgrid": "^6.3.1",
+    "form-data": "^2.3.3",
     "graphql": "^14.3.0",
     "isomorphic-fetch": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
+    "mongoose": "^5.5.10",
+    "nes.css": "^2.1.1",
     "polka": "^0.5.0",
-    "sirv": "^0.4.0"
+    "sirv": "^0.4.0",
+    "style-loader": "^0.23.1"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
