--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.2",
+    "@fortawesome/free-brands-svg-icons": "^5.8.2",
     "apollo-boost": "^0.3.1",
     "apollo-server": "^2.5.0",
     "apollo-server-micro": "^2.5.0",
@@ -29,9 +31,11 @@
     "moment": "^2.24.0",
     "mongoose": "^5.5.10",
     "nes.css": "^2.1.1",
+    "pickerjs": "^1.2.1",
     "polka": "^0.5.0",
     "sirv": "^0.4.0",
-    "style-loader": "^0.23.1"
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
